# axum-kickstart

./: .env.sample  Cargo.toml  Dockerfile  README.md  compose.yml  config.toml
.github/workflows/: ci.yml
crates/backend/: Cargo.toml
crates/backend/src/: config.rs  main.rs  state.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220101_000001_create_table.rs
